Fix blurry photos: replace transform scale with dimension-based zoom for sharper rendering

--- a/css/styles.css
+++ b/css/styles.css
@@ -2701,12 +2701,18 @@
   }
 
   .staff-bio-card__photo[src*="Dan"] {
-    transform: scale(1.4);
+    width: 140%;
+    height: 140%;
+    max-width: none;
+    margin: -10% 0 0 -20%;
     object-position: center 20%;
   }
 
   .staff-bio-card__photo[src*="Denise"] {
-    transform: scale(1.4);
+    width: 140%;
+    height: 140%;
+    max-width: none;
+    margin: -10% 0 0 -20%;
     object-position: center 20%;
   }
 
